# opencv_gpu

./: CMakeLists.txt  ColorTracker.cpp  README.md  VideoTestHaar.cpp  config.ini
