cmake_minimum_required(VERSION 2.8)
project( VideoDetect )
find_package( OpenCV REQUIRED )
add_executable(VideoDetect  VideoTestHaar.cpp )
include_directories("/usr/local/include/opencv2")
include_directories("${OpenCV_INCLUDE_DIRS}")
target_link_libraries( VideoDetect ${OpenCV_LIBS} )
get_cmake_property(_variableNames VARIABLES)
foreach (_variableName ${_variableNames})
    message(STATUS "${_variableName}=${${_variableName}}")
endforeach()

